Fix search/filter align

--- a/cmd/facette/style/admin.less
+++ b/cmd/facette/style/admin.less
@@ -6,7 +6,7 @@ article {
 			border-radius: 0.35em;
 			float: right;
 			line-height: 2em;
-			margin: 0.5em -1em 0 0;
+			margin: 0.75em -1em 0 0;
 			padding: 0 0.5em;
 
 			&::before {
